<resources>
    <string name="app_name">SaQr Serial</string>
    <string name="connect">اتصال</string>
    <string name="disconnect">قطع الاتصال</string>
    <string name="clear">مسح</string>
    <string name="port">المنفذ</string>
    <string name="send">إرسال</string>
    <string name="write_command">اكتب هنا...</string>
    <string name="received_bytes">مستلم: %1$d بايت</string>
    <string name="sent_bytes">مرسل: %1$d بايت</string>
    <string name="connected">متصل</string>
    <string name="disconnected">غير متصل</string>
    <string name="auto_send">تلقائي</string>
    <string name="no_devices_found">لم يتم العثور على أجهزة</string>
    <string name="usb_permission_denied">تم رفض الإذن</string>
    <string name="settings">الإعدادات</string>
    <string name="none">لا شيء</string>
    <string name="even">زوجي</string>
    <string name="odd">فردي</string>
    <string name="mark">علامة</string>
    <string name="space">مسافة</string>
    <string name="line_ending">نهاية السطر</string>
    <string name="nl">سطر جديد (\\n)</string>
    <string name="cr">رجوع بالكرسي (\\r)</string>
    <string name="both">كلاهما (\\r\\n)</string>
    <string name="baud_rate">سرعة البود (Baud Rate)</string>
    <string name="data_bits">بت البيانات (Data Bits)</string>
    <string name="stop_bits">بت التوقف (Stop Bits)</string>
    <string name="parity">التماثل (Parity)</string>
    <string name="save">حفظ</string>
    <string name="close">إغلاق</string>
    <string name="serial_settings">إعدادات التسلسل</string>
    <string name="successfully_connected">تم الاتصال بنجاح</string>
    <string name="service_not_ready">الخدمة غير جاهزة بعد</string>
    <string name="local_server">سيرفر محلي</string>
    <string name="server_active">السيرفر يعمل على: %1$s</string>
    <string name="server_stopped">السيرفر متوقف</string>
    <string name="language">اللغة</string>
    <string name="arabic">العربية</string>
    <string name="english">الإنجليزية</string>
    <string name="theme">المظهر</string>
    <string name="light_mode">وضع النهار</string>
    <string name="dark_mode">وضع الليل</string>
    <string name="night_mode">وضع داكن جداً</string>
    <string name="server_port">منفذ السيرفر</string>
    <string name="port_hint">مثال: 8080</string>
    <string name="manual_ip">عنوان IP يدوي (اختياري)</string>
    <string name="ip_hint">مثال: 192.168.1.100</string>
    <string name="connection">الاتصال</string>
    <string name="server">السيرفر</string>
</resources>
